# MicroCorrelate

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: Makefile  api.md  conf.py  examples.md  index.md
scripts/: stitch_maps.py
src/microcorrelate/: __init__.py  callbacks.py  cli.py  core.py  io.py  napari.py  stitching.py  utils.py
tests/: test_cli.py  test_core.py  test_stitching.py  test_utils.py
