[project]
name = "microcorrelate"
version = "0.1.1"
description = "A simple Python library for handling correlative microscopy datasets"
authors = [
    {name = "dv-bt",email = "d.bottone@pm.me"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "xmltodict (>=0.14.2,<0.15.0)",
    "imagecodecs (>=2025.3.30,<2026.0.0)",
    "simpleitk (>=2.4.1,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "ome-zarr (>=0.12.0,<0.13.0)",
    "h5py (>=3.15.1,<4.0.0)",
    "napari[pyqt6] (>=0.6.6,<0.7.0)",
]

[tool.poetry]
packages = [{include = "microcorrelate", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.1.1"
ruff = "^0.11.7"
pre-commit = "^4.2.0"
pytest = "^8.4.1"


[tool.poetry.group.notebooks.dependencies]
jupyter = "^1.1.1"
matplotlib = "^3.10.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
